# rag-visualizer

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: __main__.py  config.py  main.py
backend/app/graph/: builder.py  nodes.py  prompts.py  registry.py  state.py  templates.py  validator.py
backend/app/rag/: ingestion.py  vectorstore.py
backend/app/session/: cleanup.py  manager.py
backend/app/streaming/: sse.py
backend/app/tools/: web_search.py
backend/scripts/: ingest_docs.py
frontend/: nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/: IndexContent.vue
frontend/app/components/graph/: FlowCanvas.client.vue  GraphToolbar.vue  NodeConfigPanel.vue  NodeSidebar.vue  TemplateGallery.vue
frontend/app/components/graph/nodes/: CustomNode.vue
frontend/app/components/layout/: AppHeader.vue
frontend/app/components/panel/: LogPanel.vue  ReportView.vue
frontend/app/components/upload/: FileUpload.vue
frontend/app/composables/: useAutoLayout.ts  useGraphEditor.ts  useGraphExecution.ts  useGraphState.ts  useNodeRegistry.ts  useResearchStream.ts  useSession.ts
frontend/app/pages/: index.vue
frontend/app/types/: graph.ts
frontend/i18n/locales/: en.json  zh-TW.json
